[gd_scene load_steps=2 format=3 uid="uid://cy8k6n2xqw7pa"]

[ext_resource type="Script" path="res://scripts/ui/WormholeInfoPanel.gd" id="1_wormhole_info"]

[node name="WormholeInfoPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wormhole_info")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ZoneTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 1, 1)
theme_override_font_sizes/font_size = 24
text = "★ ZONE 3: DEEP SPACE ★"
horizontal_alignment = 1

[node name="ZoneInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "[3x AREA] [Tiers 0-2]"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ResourcesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "AVAILABLE RESOURCES:"
horizontal_alignment = 1

[node name="Resources" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CommonLabel" type="Label" parent="VBoxContainer/Resources"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 1)
text = "Common (60%)"

[node name="CommonBar" type="ProgressBar" parent="VBoxContainer/Resources"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 60.0
show_percentage = false

[node name="UncommonLabel" type="Label" parent="VBoxContainer/Resources"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 0.9, 1)
text = "Uncommon (30%)"

[node name="UncommonBar" type="ProgressBar" parent="VBoxContainer/Resources"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 30.0
show_percentage = false

[node name="RareLabel" type="Label" parent="VBoxContainer/Resources"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.5, 0.9, 1)
text = "Rare (10%)"

[node name="RareBar" type="ProgressBar" parent="VBoxContainer/Resources"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
value = 10.0
show_percentage = false

[node name="UltraRareLabel" type="Label" parent="VBoxContainer/Resources"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
text = "Ultra-Rare (0%)"

[node name="UltraRareBar" type="ProgressBar" parent="VBoxContainer/Resources"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="ResourceTypesLabel" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Resource Types: 30"

[node name="AsteroidCountLabel" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Total Asteroids: 50"

[node name="ValueRatingLabel" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
text = "Estimated Value: ★★★☆☆"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TravelButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.9, 1)
theme_override_colors/font_hover_color = Color(0.5, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "✦ TRAVEL TO ZONE 3 ✦"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

